# paint

./: .gitignore  .output.txt  README.md  TODO.md  pom.xml
.github/workflows/: graalvm-native-build.yml  jpackage-installers.yml  packaging.yml  rust-installers.yml
rust/: Cargo.toml  README.md  TODO.md  package-lock.json  package.json  vitest.config.js
rust/src/: canvasActions.js  canvasActions.test.js  drawing.js  drawing.test.js  index.html  main.js  main.rs  styles.css
rust/src-tauri/: Cargo.toml  tauri.conf.json
rust/src-tauri/capabilities/: default.json
rust/src-tauri/src/: main.rs
src/installer/linux/: postinst  postrm
src/installer/linux/usr/share/applications/: paint.desktop
src/main/java/io/github/ozkanpakdil/paint/: DrawArea.java  GUI.java  Main.java  RibbonBar.java  ScanlineFloodFill.java  SideMenu.java  Tool.java
src/main/resources/: installer.properties
src/main/resources/lib/: fontconfig.properties
src/test/java/io/github/ozkanpakdil/paint/: ArrowToolTest.java  CropBehaviorTest.java  CropSelectionTest.java  DrawAreaResizeTest.java  GUIStatusUpdateTest.java  HighlighterDrawTest.java  MorePaintUiTests.java  OpenImageFromCLITest.java  PaintUiTest.java  RibbonOpacityControlTest.java  SelectAllCopyTest.java
src/test/robot/: paint_ui.robot
