[package]
name = "paint-egui"
version = "0.1.0"
edition = "2021"
authors = ["Ozkan Pakdil"]
description = "Paint application in Rust using egui"

[dependencies]
# egui core and rendering
egui = "0.29"
eframe = { version = "0.29", default-features = true, features = ["default_fonts"] }

# Image handling
image = { version = "0.25", features = ["png", "jpeg"] }

# Color picker
egui_extras = { version = "0.29", features = ["image"] }

# File dialogs
rfd = "0.15"

# System clipboard (images)
arboard = "3"

# Serialization for save/load
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
